--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.2
   http: ^0.13.4
   data_connection_checker: ^0.3.4
+  curved_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
