--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^0.13.4
   data_connection_checker: ^0.3.4
   curved_navigation_bar: ^1.0.1
+  flutter_rating_bar: ^4.0.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
